# consist

./: .travis.yml  Cargo.toml  LICENSE  README.md  circle.yml
examples/: memcached.rs
src/: lib.rs
tests/: hash_ring.rs
