[package]
name = "consist"
version = "0.3.2"
authors = ["Andrew Duffy <root@aduffy.io>"]
license = "MIT"
keywords = ["consistent", "hashing", "ring"]
description = "Dead-simple consistent hashing library"
repository = "https://github.com/andreweduffy/consist"
documentation = "https://docs.rs/consist/"
include = ["src/**/*", "Cargo.toml"]

[dependencies.crc]
version = "^1.3.0"

